# Posture-Detection

./: README.md
Code/: benchmark_models.py  build.gradle  collect_performance_data.py  compare_devices.py  compare_performance.py  firebase_rules.json  gradle.properties  requirements_benchmark.txt  settings.gradle
Code/app/: build.gradle  google-services.json
Code/app/src/androidTest/java/com/esw/postureanalyzer/: ExampleInstrumentedTest.java
Code/app/src/main/: AndroidManifest.xml
Code/app/src/main/assets/: crosslegged.tflite  lean_direction_model.tflite  posture_model.tflite
Code/app/src/main/cpp/: CMakeLists.txt  uvc_camera.cpp  uvc_camera.h  uvc_camera_impl.cpp  uvc_protocol.h  v4l2_camera.cpp  v4l2_camera.h
Code/app/src/main/java/com/esw/postureanalyzer/: DashboardActivity.java  EmailSettingsActivity.java  MainActivity.java
Code/app/src/main/res/layout/: activity_dashboard.xml  activity_email_settings.xml  activity_main.xml  dialog_stretch_suggestion.xml
Code/app/src/main/res/values/: strings.xml  themes.xml
Code/app/src/main/res/values-night/: themes.xml
Code/app/src/main/res/xml/: device_filter.xml  file_paths.xml
Code/app/src/test/java/com/esw/postureanalyzer/: ExampleUnitTest.java
Code/gradle/wrapper/: gradle-wrapper.properties
Code/training/: crossleg_create_data.py  crosslegged_sitting_data.csv  lean_create_dataset.py  lean_dataset.csv  pose_dataset.csv  runmodelslouching.py  runningcrossleg.py  runninglean.py  slouching_create_dataset.py  trainingcrossleged.py  trainingleanmodel.py  trainmodelslouching.py
(+26 files in other folders)
